--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "homepage": "https://github.com/grntco/battleship#readme",
   "devDependencies": {
     "css-loader": "^6.8.1",
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
     "html-webpack-plugin": "^5.5.3",
+    "prettier": "3.0.3",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
