--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "build": "webpack"
@@ -25,6 +25,7 @@
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.7.0",
     "prettier": "3.0.3",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
