--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
-    "build": "webpack"
+    "build": "webpack",
+    "deploy-demo": "git subtree push --prefix dist origin gh-pages"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "css-loader": "^6.8.1",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
+    "gh-pages": "^6.1.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
     "prettier": "3.0.3",
